--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="mailto:digitalsomah@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<p class="copyright">	
-					<a href="file:///home/lawson/Desktop/Porfolio%20site%20github/index.html#" class="button">Home</a>
+					<a href="https://somah336.github.io/" class="button">Home</a>
 				</p>
 			</footer>
 
